--- a/1.md
+++ b/1.md
@@ -16,45 +16,34 @@ layout: false
 + Smarter check-points that allow protection of database (and other application) servers
 + Complete rsync-based Linux replication
 + Network isolation for test failover and failover
-+ Storage check & repair for Local Cache PG .red[*]
-  - Currently no check and repair at all for Local Cache, unlike Local Replica
-  - This feature will help quickly fix the DR image when things go wrong. 
-  - Without this feature, customer has to resync the overall image when the DR
-  	image is slightly different from PR image. 
++ Storage check & repair for Local Cache PG .red
 + Client GUI enhancements
   - Start/Stop/Pause replication on guest VMs
   - Change the replication speed
   - Show local replication status
-  - Dirty data
-  - iSCSI connection
-  - Disk mappings, replication rate  
+  - Show dirty data
+  - Display iSCSI connection
+  - Display disk mappings, replication rate  
   - *Allow customer care team to add disk mappings*
- .footnote[.red[*] Depends on local disk boot feature]
 ---
 
 # Integrated DR MVP
-+ Supports CLC/Primary <-> CLC/DR protection
++ Supports CLC/primary <-> CLC/DR protection
 + Web-based UI
 + SafeHaven APIs
 + Automatic updates
-  - EASY: Web UI, API, syntropy
-  - HARD: SBD, LRA
 + Completely self-service
-  - Automatically setting up the environment
-  - Flexibity to add/remove servers from protection group
-  - Ability to expand disk or add disk
-  - All agents installation and configuration
 
 ---
 
 # Future
 + Boot from local disk
-+ Supports non-VMware VMs
 + Supports object storage
-+ Faster fail-back for Local Cache PG
++ Faster fail-back for Local Cache PG.red[*]
 + Block-level replication for Linux
-+ Supports AWS <-> CLC
-+ Supports OpenStack <-> CLC
++ Supports AWS <-> CLC.red[*]
++ Supports OpenStack <-> CLC.red[*]
++ Supports Physical <-> CLC.red[*]
 + Supports vCloud <-> CLC
-+ Supports Physical <-> CLC
 + Supports vCenter <-> CLC 
+ .footnote[.red[*] Depends on boot from local disk]
