--- a/1.md
+++ b/1.md
@@ -16,7 +16,7 @@ layout: false
 + Smarter check-points that allow protection of database (and other application) servers
 + Complete rsync-based Linux replication
 + Network isolation for test failover and failover
-+ Storage check & repair for Local Cache PG .red
++ Storage check & repair for Local Cache PG
 + Client GUI enhancements
   - Start/Stop/Pause replication on guest VMs
   - Change the replication speed
