change based on Drew's comment

--- a/1.md
+++ b/1.md
@@ -1,46 +1,81 @@
 name: agenda
 class: middle, center
-count: true
+count: false
 layout: false
 
 # .DeepSkyBlue[SafeHaven Roadmap]
 ---
-
-# 3.1.1 Final 
+class: middle
+count: true
+# SafeHaven 3.1.1   
++ Use iPXE boot to avoid boot-storm when stand-by servers try to boot from the SRN at the same time
++ Automatic installation of LRA and makestub
+  - Speed up the overall on-boarding procedure
+  - Convince silver level or plus customers to user SafeHaven 
+  - Lay the foundation of SafeHaven-CLC integration
++ Allow customer to add VMs to existing protection group
++ Supports expansion of disks
++ Supports adding new disks
++ Supports guest with GUID Partition Table (GPT) disks
 + Fix deficiencies and bugs
-+ Use iPXE target to avoid boot-storm when all servers try to boot from the SRN at the same time
-+ Upgrade the CLC API from v1 to v2
----
 
+---
+class: middle
+count: true
 # SafeHaven 4.0 MVP 
-+ Smarter check-points that allow protection of database (and other application) servers
-+ Complete rsync-based Linux replication
-+ Network isolation for test failover and failover
-+ Storage check & repair for Local Cache PG
-+ Client GUI enhancements
++ Application-aware checkpoints so that we could protect following servers:.red[*]
+  - Database server
+  - Sharepoint server
+  - Exchange server
+  - Active Directory server (if self-assigned IP is supported in DR)
++ Automatic network isolation for test failover and failover.red[*]
+  - Prevent the disrruption on PR when stand-by servers running with same
+  	hostnames but different IPs during test-failover and failover
+  - Current workaround is not sustainable and does not solve the entire problem
++ Client GUI enhancements.red[*]
   - Start/Stop/Pause replication on guest VMs
   - Change the replication speed
-  - Show local replication status
-  - Show dirty data
-  - Display iSCSI connection
-  - Display disk mappings, replication rate  
-  - *Allow customer care team to add disk mappings*
----
+  - Report more about the state and properties of the guest, including:
+      * Local replication status
+      * Dirty data
+      * iSCSI connection
+      * Disk mappings
+      * Replication rate  
+  - *Connect guest to iSCSI target*
+  - *Add disk mappings*
++ Automatic copy from iSCSI target to local disk during failback.red[*]
++ Storage check-and-repair for Local Cache PG
+  - Quickly fix the DR broken image
++ Complete rsync-based Linux replication.red[*]
 
+---
+class: middle
+count: true
 # Integrated DR MVP
 + Supports CLC/primary <-> CLC/DR protection
 + Web-based UI
-+ SafeHaven APIs
+  - Enable DR
+  - Manage PG
+  - Report the guest VM replication status
++ SafeHaven backend
+  - Develop a new set of SafeHaven API
+  - Refine the CMS console commands
 + Automatic updates
+  - Web UI, syntropy, sbd, guest agents
 + Completely self-service
+  - Automatic DR set up
+  - Flexibility to add a VM to DRaaS or remove a VM from DRaaS
+  - Flexibility to expand disk or add disk
 
 ---
-
+class: middle
 # Future
 + Boot from local disk
 + Supports object storage
 + Faster fail-back for Local Cache PG.red[*]
 + Block-level replication for Linux
+ - Local Cache PG for Linux
+ - Synchronous replication
 + Supports AWS <-> CLC.red[*]
 + Supports OpenStack <-> CLC.red[*]
 + Supports Physical <-> CLC.red[*]
