--- a/1.md
+++ b/1.md
@@ -1,19 +1,22 @@
-name: agenda
+name: agenga
 class: middle, center
 count: false
 layout: false
 
-# .DeepSkyBlue[SafeHaven Roadmap]
+# SafeHaven Roadmap
 ---
 class: middle
 count: true
 # SafeHaven 3.1.1   
-+ Use iPXE boot to avoid boot-storm when stand-by servers try to boot from the SRN at the same time
 + Automatic installation of LRA and makestub
-  - Speed up the overall on-boarding procedure
-  - Convince silver level or plus customers to user SafeHaven 
-  - Lay the foundation of SafeHaven-CLC integration
-+ Allow customer to add VMs to existing protection group
+  .LineHeightShort[- Speed up the overall on-boarding procedure]
+  .LineHeightShort[- Lay the foundation of SafeHaven-CLC integration]
++ Use iPXE boot to avoid boot-storm 
+  .LineHeightShort[- Multiple servers booting from one SRN simultanieously causes
+  boot-storm]
+  .LineHeightShort[- Affected procedures include test-failover, failover and failback]
++ Add new VMs to existing protection group
++ Remove VMs from existing protection group
 + Supports expansion of disks
 + Supports adding new disks
 + Supports guest with GUID Partition Table (GPT) disks
@@ -22,63 +25,75 @@ count: true
 ---
 class: middle
 count: true
-# SafeHaven 4.0 MVP 
-+ Application-aware checkpoints so that we could protect following servers:.red[*]
-  - Database server
-  - Sharepoint server
-  - Exchange server
-  - Active Directory server (if self-assigned IP is supported in DR)
-+ Automatic network isolation for test failover and failover.red[*]
-  - Prevent the disrruption on PR when stand-by servers running with same
-  	hostnames but different IPs during test-failover and failover
-  - Current workaround is not sustainable and does not solve the entire problem
-+ Client GUI enhancements.red[*]
-  - Start/Stop/Pause replication on guest VMs
-  - Change the replication speed
-  - Report more about the state and properties of the guest, including:
-      * Local replication status
-      * Dirty data
-      * iSCSI connection
-      * Disk mappings
-      * Replication rate  
-  - *Connect guest to iSCSI target*
-  - *Add disk mappings*
-+ Automatic copy from iSCSI target to local disk during failback.red[*]
-+ Storage check-and-repair for Local Cache PG
-  - Quickly fix the DR broken image
-+ Complete rsync-based Linux replication.red[*]
+#Highlevel Goals of Integration
++ A self-driven product 
+  .LineHeightShort[- No manual steps, no help from on-boarding team]
++ Continuous delivery
++ A comprehensive  DRaaS solution
+  .LineHeightShort[- Protect servers with special applications such as database]
+  .LineHeightShort[- A more sophicated test-failover]
+  .LineHeightShort[- A profound way to solve the issue when sth goes wrong]
 
 ---
 class: middle
 count: true
-# Integrated DR MVP
-+ Supports CLC/primary <-> CLC/DR protection
-+ Web-based UI
-  - Enable DR
-  - Manage PG
-  - Report the guest VM replication status
-+ SafeHaven backend
-  - Develop a new set of SafeHaven API
-  - Refine the CMS console commands
-+ Automatic updates
-  - Web UI, syntropy, sbd, guest agents
-+ Completely self-service
-  - Automatic DR set up
-  - Flexibility to add a VM to DRaaS or remove a VM from DRaaS
-  - Flexibility to expand disk or add disk
+#Integrate DR MVP
++ Only supports CLC/PR to CLC/DR:
+  .LineHeightShort[- Stand-alone SafeHaven supports all VMware based sites]
+  .LineHeightShort[- 90% of current customers DRaaS are vCenter to CLC]
++ Web-based UI 
+  .LineHeightShort[- Enable DRaaS ]
+  .LineHeightShort[- Every operation that SH  can do]
++ Backend enhancements to achieve completely self-service
+  .LineHeightShort[- Automatic DRaaS environment set up]
+  .LineHeightShort[- Automatically matches the stub NIC to source VM NIC]
+  .LineHeightShort[- Flexibility to add a VM to DRaaS or remove a VM from DRaaS]
+  .LineHeightShort[- Flexibility to expand disk or add disk]
+  .LineHeightShort[- Smart copy from iSCSI target to local disk during failback]
 
 ---
 class: middle
+count: true
++ SafeHaven backend interface for Web UI
+  .LineHeightShort[- Develop a new set of SafeHaven API]
+  .LineHeightShort[- Refine the CMS console commands]
++ Automatic updates to ensure continuous delivery
+  .LineHeightShort[- Second Backup Device (SBD)]
+  .LineHeightShort[- Guest agents]
++ Automated billing procedure for customer
+---
+class: middle
+count: true
++ Application-aware checkpoints so that we could protect following servers:
+  .LineHeightShort[- Database server ]
+  .LineHeightShort[- Sharepoint server]
+  .LineHeightShort[- Exchange server]
+  .LineHeightShort[- Active Directory server (if self-assigned IP is supported in DR)]
++ Automatic network isolation for test failover
+  .LineHeightShort[- Prevent the disrruption on PR when stand-by servers running with same
+  	hostnames but different IPs]
+  .LineHeightShort[- Current workaround is not sustainable and does not solve the
+  entire problem]
++ Storage check-and-repair for Local Cache PG
+  .LineHeightShort[- Quickly fix the DR broken image]
+  .LineHeightShort[- Local replica PG has this feature]
+
+---
+class: middle 
+count: true
 # Future
++ Supports vCenter to CLC
 + Boot from local disk
-+ Supports object storage
-+ Faster fail-back for Local Cache PG.red[*]
+  .LineHeightShort[- Current iSCSI boot causes major limitations and not
+  reliable]
+  .LineHeightShort[- Supports AWS to CLC]
+  .LineHeightShort[- Supports OpenStack to CLC]
+  .LineHeightShort[- Supports Physical machine to CLC]
+  .LineHeightShort[- Faster and elegant fail-back for Local Cache PG]
 + Block-level replication for Linux
- - Local Cache PG for Linux
- - Synchronous replication
-+ Supports AWS <-> CLC.red[*]
-+ Supports OpenStack <-> CLC.red[*]
-+ Supports Physical <-> CLC.red[*]
-+ Supports vCloud <-> CLC
-+ Supports vCenter <-> CLC 
- .footnote[.red[*] Depends on boot from local disk]
+ .LineHeightShort[- Local Cache PG for Linux]
+ .LineHeightShort[- Synchronized replication improves RTO and RPO]
++ Supports vCloud to  CLC
++ Supports object storage
++ Integrate backup with DRaaS
+  .LineHeightShort[- Backup the overwritten checkpoints]
