--- a/1.md
+++ b/1.md
@@ -9,12 +9,12 @@ class: middle
 count: true
 # SafeHaven 3.1.1   
 + Automatic installation of LRA and makestub
-  .LineHeightShort[- Speed up the overall on-boarding procedure]
-  .LineHeightShort[- Lay the foundation of SafeHaven-CLC integration]
+  - Speed up the overall on-boarding procedure
+  - The foundation of SafeHaven-CLC integration
 + Use iPXE boot to avoid boot-storm 
-  .LineHeightShort[- Multiple servers booting from one SRN simultanieously causes
-  boot-storm]
-  .LineHeightShort[- Affected procedures include test-failover, failover and failback]
+  - Multiple servers booting from one SRN simultanieously causes
+  boot-storm
+  - Affected procedures include test-failover, failover and failback
 + Add new VMs to existing protection group
 + Remove VMs from existing protection group
 + Supports expansion of disks
@@ -25,58 +25,59 @@ count: true
 ---
 class: middle
 count: true
-#Highlevel Goals of Integration
-+ A self-driven product 
-  .LineHeightShort[- No manual steps, no help from on-boarding team]
+#Goals of Integration
++ A self-activating product 
+  - The DRaaS solution will be deployed with a few interactions
+  - Does not need on-boarding team
 + Continuous delivery
 + A comprehensive  DRaaS solution
-  .LineHeightShort[- Protect servers with special applications such as database]
-  .LineHeightShort[- A more sophicated test-failover]
-  .LineHeightShort[- A profound way to solve the issue when sth goes wrong]
+  - Protect servers with special applications such as database
+  - A more sophicated test-failover
+  - A profound way to solve the issue when sth goes wrong
 
 ---
 class: middle
 count: true
 #Integrate DR MVP
 + Only supports CLC/PR to CLC/DR:
-  .LineHeightShort[- Stand-alone SafeHaven supports all VMware based sites]
-  .LineHeightShort[- 90% of current customers DRaaS are vCenter to CLC]
+  - Stand-alone SafeHaven supports all VMware based sites
+  - 90% of current customers DRaaS are vCenter to CLC
 + Web-based UI 
-  .LineHeightShort[- Enable DRaaS ]
-  .LineHeightShort[- Every operation that SH  can do]
+  - Enable DRaaS 
+  - Every operation that SH  can do
 + Backend enhancements to achieve completely self-service
-  .LineHeightShort[- Automatic DRaaS environment set up]
-  .LineHeightShort[- Automatically matches the stub NIC to source VM NIC]
-  .LineHeightShort[- Flexibility to add a VM to DRaaS or remove a VM from DRaaS]
-  .LineHeightShort[- Flexibility to expand disk or add disk]
-  .LineHeightShort[- Smart copy from iSCSI target to local disk during failback]
+  - Automatic DRaaS environment set up
+  - Automatically matches the stub NIC to source VM NIC
+  - Flexibility to add a VM to DRaaS or remove a VM from DRaaS
+  - Flexibility to expand disk or add disk
+  - Smart copy from iSCSI target to local disk during failback
 
 ---
 class: middle
 count: true
 + SafeHaven backend interface for Web UI
-  .LineHeightShort[- Develop a new set of SafeHaven API]
-  .LineHeightShort[- Refine the CMS console commands]
+  - Develop a new set of SafeHaven API
+  - Refine the CMS console commands
 + Automatic updates to ensure continuous delivery
-  .LineHeightShort[- Second Backup Device (SBD)]
-  .LineHeightShort[- Guest agents]
-+ Automated billing procedure for customer
+  - Second Backup Device (SBD)
+  - Guest agents
++ Automated billing procedure
 ---
 class: middle
 count: true
 + Application-aware checkpoints so that we could protect following servers:
-  .LineHeightShort[- Database server ]
-  .LineHeightShort[- Sharepoint server]
-  .LineHeightShort[- Exchange server]
-  .LineHeightShort[- Active Directory server (if self-assigned IP is supported in DR)]
+  - Database server 
+  - Sharepoint server
+  - Exchange server
+  - Active Directory server (if self-assigned IP is supported in DR)
 + Automatic network isolation for test failover
-  .LineHeightShort[- Prevent the disrruption on PR when stand-by servers running with same
-  	hostnames but different IPs]
-  .LineHeightShort[- Current workaround is not sustainable and does not solve the
-  entire problem]
+  - Prevent the disrruption on PR when stand-by servers running with same
+  	hostnames but different IPs
+  - Current workaround is not sustainable and does not solve the
+  entire problem
 + Storage check-and-repair for Local Cache PG
-  .LineHeightShort[- Quickly fix the DR broken image]
-  .LineHeightShort[- Local replica PG has this feature]
+  - Quickly fix the DR broken image
+  - Local replica PG has this feature
 
 ---
 class: middle 
@@ -84,16 +85,16 @@ count: true
 # Future
 + Supports vCenter to CLC
 + Boot from local disk
-  .LineHeightShort[- Current iSCSI boot causes major limitations and not
-  reliable]
-  .LineHeightShort[- Supports AWS to CLC]
-  .LineHeightShort[- Supports OpenStack to CLC]
-  .LineHeightShort[- Supports Physical machine to CLC]
-  .LineHeightShort[- Faster and elegant fail-back for Local Cache PG]
+  - Current iSCSI boot causes major limitations and not
+  reliable
+  - Supports AWS to CLC
+  - Supports OpenStack to CLC
+  - Supports Physical machine to CLC
+  - Faster and elegant fail-back for Local Cache PG
 + Block-level replication for Linux
- .LineHeightShort[- Local Cache PG for Linux]
- .LineHeightShort[- Synchronized replication improves RTO and RPO]
+ - Local Cache PG for Linux
+ - Synchronized replication improves RTO and RPO
 + Supports vCloud to  CLC
 + Supports object storage
 + Integrate backup with DRaaS
-  .LineHeightShort[- Backup the overwritten checkpoints]
+  - Backup the overwritten checkpoints
